ritchie.output
Terminals unused in grammar

   FIELD
   STATICVERB
   BITWISEOP
   COLON
   SLCOMMENT


Grammar

    0 $accept: ritchie "end of file"

    1 ritchie: statements
    2        | "end of file"

    3 statements: simple_statement
    4           | statements simple_statement

    5 simple_statement: ENDOFLINE
    6                 | DTV_EXTERNAL STRING ENDOFLINE
    7                 | DTV_ADDSOURCE STRING ENDOFLINE
    8                 | statement ENDOFLINE
    9                 | function_definition ASSIGNMENT statement ENDOFLINE
   10                 | function_definition ENDOFLINE codeblock
   11                 | CODE_INSERT ENDOFLINE
   12                 | class_definition ENDOFLINE classblock

   13 statement: expr
   14          | RETURN expr
   15          | RETURN

   16 expr: object
   17     | expr ASSIGNMENT expr
   18     | expr MATHASSIGN expr
   19     | expr LESSTHAN expr
   20     | expr GREATERTHAN expr
   21     | expr COMPARISON expr
   22     | expr BOOLEANOP expr
   23     | expr TERNARY expr
   24     | expr CONDRETURN expr
   25     | expr MATH_OP expr
   26     | expr UNARYNEGATE expr
   27     | UNARYNEGATE expr
   28     | VERB arguments
   29     | TYPE arguments
   30     | TYPE LBRACE TYPE RBRACE arguments
   31     | LPAREN expr RPAREN
   32     | expr LBRACKET expr RBRACKETASSIGN expr
   33     | expr LBRACKET expr RBRACKET
   34     | expr ACCESSOR anyIdent
   35     | expr ACCESSOR VERB arguments
   36     | IDENT DESTRUCTOR

   37 arguments: %empty
   38          | LPAREN RPAREN
   39          | LPAREN arglist RPAREN
   40          | arguments ENDOFLINE codeblock

   41 arglist: expr
   42        | expr PARAMCOMMA arglist

   43 typeArgList: UNMARKEDNEWIDENT
   44            | UNMARKEDNEWIDENT PARAMCOMMA UNMARKEDNEWIDENT

   45 object: INT
   46       | CHAR
   47       | FLOAT
   48       | IDENT
   49       | NEWIDENT
   50       | UNMARKEDNEWIDENT
   51       | STRING
   52       | SELFIDENT
   53       | CONDITIONLINK

   54 anyIdent: IDENT
   55         | NEWIDENT
   56         | UNMARKEDNEWIDENT

   57 anyIdentOrVerb: IDENT
   58               | NEWIDENT
   59               | UNMARKEDNEWIDENT
   60               | VERB

   61 function_definition: anyIdentOrVerb RETURN TYPE LPAREN parameters RPAREN
   62                    | anyIdentOrVerb RETURN LPAREN parameters RPAREN

   63 parameters: %empty
   64           | TYPE parameterIdent
   65           | parameters PARAMCOMMA TYPE parameterIdent

   66 parameterIdent: IDENT
   67               | UNMARKEDNEWIDENT

   68 codeblock: INDENT statements UNINDENT

   69 class_definition: UNMARKEDNEWIDENT CLASSDEC TYPE
   70                 | UNMARKEDNEWIDENT LBRACE typeArgList RBRACE CLASSDEC TYPE
   71                 | UNMARKEDNEWIDENT CLASSDECPRIM TYPE
   72                 | UNMARKEDNEWIDENT LBRACE typeArgList RBRACE CLASSDECPRIM TYPE

   73 ctor_definition: SELFIDENT LPAREN parameters RPAREN

   74 classblock: INDENT class_statements UNINDENT

   75 class_statements: class_statement
   76                 | class_statements class_statement

   77 class_statement: ENDOFLINE
   78                | UNMARKEDNEWIDENT ASSIGNMENT TYPE ENDOFLINE
   79                | function_definition ENDOFLINE codeblock
   80                | function_definition ASSIGNMENT statement ENDOFLINE
   81                | ctor_definition ENDOFLINE codeblock


Terminals, with rules where they appear

"end of file" (0) 0 2
error (256)
ENDOFLINE (258) 5 6 7 8 9 10 11 12 40 77 78 79 80 81
INT (259) 45
CHAR (260) 46
FLOAT (261) 47
STRING (262) 6 7 51
IDENT (263) 36 48 54 57 66
NEWIDENT (264) 49 55 58
UNMARKEDNEWIDENT (265) 43 44 50 56 59 67 69 70 71 72 78
FIELD (266)
VERB (267) 28 35 60
STATICVERB (268)
TYPE (269) 29 30 61 64 65 69 70 71 72 78
MATH_OP (270) 25
ASSIGNMENT (271) 9 17 78 80
LPAREN (272) 31 38 39 61 62 73
RPAREN (273) 31 38 39 61 62 73
LBRACKET (274) 32 33
RBRACKET (275) 33
RBRACKETASSIGN (276) 32
INDENT (277) 68 74
LBRACE (278) 30 70 72
RBRACE (279) 30 70 72
UNINDENT (280) 68 74
CONDITIONLINK (281) 53
UNARYNEGATE (282) 26 27
MATHASSIGN (283) 18
BITWISEOP (284)
BOOLEANOP (285) 22
COLON (286)
CLASSDEC (287) 69 70
CLASSDECPRIM (288) 71 72
PARAMCOMMA (289) 42 44 65
RETURN (290) 14 15 61 62
SELFIDENT (291) 52 73
SLCOMMENT (292)
COMPARISON (293) 21
LESSTHAN (294) 19
GREATERTHAN (295) 20
TERNARY (296) 23
CODE_INSERT (297) 11
CONDRETURN (298) 24
ACCESSOR (299) 34 35
DTV_EXTERNAL (300) 6
DTV_ADDSOURCE (301) 7
DESTRUCTOR (302) 36


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
ritchie (49)
    on left: 1 2, on right: 0
statements (50)
    on left: 3 4, on right: 1 4 68
simple_statement (51)
    on left: 5 6 7 8 9 10 11 12, on right: 3 4
statement (52)
    on left: 13 14 15, on right: 8 9 80
expr (53)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36, on right: 13 14 17 18 19 20 21 22 23 24 25 26 27 31 32
    33 34 35 41 42
arguments (54)
    on left: 37 38 39 40, on right: 28 29 30 35 40
arglist (55)
    on left: 41 42, on right: 39 42
typeArgList (56)
    on left: 43 44, on right: 70 72
object (57)
    on left: 45 46 47 48 49 50 51 52 53, on right: 16
anyIdent (58)
    on left: 54 55 56, on right: 34
anyIdentOrVerb (59)
    on left: 57 58 59 60, on right: 61 62
function_definition (60)
    on left: 61 62, on right: 9 10 79 80
parameters (61)
    on left: 63 64 65, on right: 61 62 65 73
parameterIdent (62)
    on left: 66 67, on right: 64 65
codeblock (63)
    on left: 68, on right: 10 40 79 81
class_definition (64)
    on left: 69 70 71 72, on right: 12
ctor_definition (65)
    on left: 73, on right: 81
classblock (66)
    on left: 74, on right: 12
class_statements (67)
    on left: 75 76, on right: 74 76
class_statement (68)
    on left: 77 78 79 80 81, on right: 75 76


State 0

    0 $accept: . ritchie "end of file"

    "end of file"     shift, and go to state 1
    ENDOFLINE         shift, and go to state 2
    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 7
    NEWIDENT          shift, and go to state 8
    UNMARKEDNEWIDENT  shift, and go to state 9
    VERB              shift, and go to state 10
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    RETURN            shift, and go to state 15
    SELFIDENT         shift, and go to state 16
    CODE_INSERT       shift, and go to state 17
    DTV_EXTERNAL      shift, and go to state 18
    DTV_ADDSOURCE     shift, and go to state 19

    ritchie              go to state 20
    statements           go to state 21
    simple_statement     go to state 22
    statement            go to state 23
    expr                 go to state 24
    object               go to state 25
    anyIdentOrVerb       go to state 26
    function_definition  go to state 27
    class_definition     go to state 28


State 1

    2 ritchie: "end of file" .

    $default  reduce using rule 2 (ritchie)


State 2

    5 simple_statement: ENDOFLINE .

    $default  reduce using rule 5 (simple_statement)


State 3

   45 object: INT .

    $default  reduce using rule 45 (object)


State 4

   46 object: CHAR .

    $default  reduce using rule 46 (object)


State 5

   47 object: FLOAT .

    $default  reduce using rule 47 (object)


State 6

   51 object: STRING .

    $default  reduce using rule 51 (object)


State 7

   36 expr: IDENT . DESTRUCTOR
   48 object: IDENT .
   57 anyIdentOrVerb: IDENT .

    DESTRUCTOR  shift, and go to state 29

    RETURN    reduce using rule 57 (anyIdentOrVerb)
    $default  reduce using rule 48 (object)


State 8

   49 object: NEWIDENT .
   58 anyIdentOrVerb: NEWIDENT .

    RETURN    reduce using rule 58 (anyIdentOrVerb)
    $default  reduce using rule 49 (object)


State 9

   50 object: UNMARKEDNEWIDENT .
   59 anyIdentOrVerb: UNMARKEDNEWIDENT .
   69 class_definition: UNMARKEDNEWIDENT . CLASSDEC TYPE
   70                 | UNMARKEDNEWIDENT . LBRACE typeArgList RBRACE CLASSDEC TYPE
   71                 | UNMARKEDNEWIDENT . CLASSDECPRIM TYPE
   72                 | UNMARKEDNEWIDENT . LBRACE typeArgList RBRACE CLASSDECPRIM TYPE

    LBRACE        shift, and go to state 30
    CLASSDEC      shift, and go to state 31
    CLASSDECPRIM  shift, and go to state 32

    RETURN    reduce using rule 59 (anyIdentOrVerb)
    $default  reduce using rule 50 (object)


State 10

   28 expr: VERB . arguments
   60 anyIdentOrVerb: VERB .

    LPAREN  shift, and go to state 33

    RETURN    reduce using rule 60 (anyIdentOrVerb)
    $default  reduce using rule 37 (arguments)

    arguments  go to state 34


State 11

   29 expr: TYPE . arguments
   30     | TYPE . LBRACE TYPE RBRACE arguments

    LPAREN  shift, and go to state 33
    LBRACE  shift, and go to state 35

    $default  reduce using rule 37 (arguments)

    arguments  go to state 36


State 12

   31 expr: LPAREN . expr RPAREN

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 41
    object  go to state 25


State 13

   53 object: CONDITIONLINK .

    $default  reduce using rule 53 (object)


State 14

   27 expr: UNARYNEGATE . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 42
    object  go to state 25


State 15

   14 statement: RETURN . expr
   15          | RETURN .

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    $default  reduce using rule 15 (statement)

    expr    go to state 43
    object  go to state 25


State 16

   52 object: SELFIDENT .

    $default  reduce using rule 52 (object)


State 17

   11 simple_statement: CODE_INSERT . ENDOFLINE

    ENDOFLINE  shift, and go to state 44


State 18

    6 simple_statement: DTV_EXTERNAL . STRING ENDOFLINE

    STRING  shift, and go to state 45


State 19

    7 simple_statement: DTV_ADDSOURCE . STRING ENDOFLINE

    STRING  shift, and go to state 46


State 20

    0 $accept: ritchie . "end of file"

    "end of file"  shift, and go to state 47


State 21

    1 ritchie: statements .
    4 statements: statements . simple_statement

    ENDOFLINE         shift, and go to state 2
    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 7
    NEWIDENT          shift, and go to state 8
    UNMARKEDNEWIDENT  shift, and go to state 9
    VERB              shift, and go to state 10
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    RETURN            shift, and go to state 15
    SELFIDENT         shift, and go to state 16
    CODE_INSERT       shift, and go to state 17
    DTV_EXTERNAL      shift, and go to state 18
    DTV_ADDSOURCE     shift, and go to state 19

    $default  reduce using rule 1 (ritchie)

    simple_statement     go to state 48
    statement            go to state 23
    expr                 go to state 24
    object               go to state 25
    anyIdentOrVerb       go to state 26
    function_definition  go to state 27
    class_definition     go to state 28


State 22

    3 statements: simple_statement .

    $default  reduce using rule 3 (statements)


State 23

    8 simple_statement: statement . ENDOFLINE

    ENDOFLINE  shift, and go to state 49


State 24

   13 statement: expr .
   17 expr: expr . ASSIGNMENT expr
   18     | expr . MATHASSIGN expr
   19     | expr . LESSTHAN expr
   20     | expr . GREATERTHAN expr
   21     | expr . COMPARISON expr
   22     | expr . BOOLEANOP expr
   23     | expr . TERNARY expr
   24     | expr . CONDRETURN expr
   25     | expr . MATH_OP expr
   26     | expr . UNARYNEGATE expr
   32     | expr . LBRACKET expr RBRACKETASSIGN expr
   33     | expr . LBRACKET expr RBRACKET
   34     | expr . ACCESSOR anyIdent
   35     | expr . ACCESSOR VERB arguments

    MATH_OP      shift, and go to state 50
    ASSIGNMENT   shift, and go to state 51
    LBRACKET     shift, and go to state 52
    UNARYNEGATE  shift, and go to state 53
    MATHASSIGN   shift, and go to state 54
    BOOLEANOP    shift, and go to state 55
    COMPARISON   shift, and go to state 56
    LESSTHAN     shift, and go to state 57
    GREATERTHAN  shift, and go to state 58
    TERNARY      shift, and go to state 59
    CONDRETURN   shift, and go to state 60
    ACCESSOR     shift, and go to state 61

    $default  reduce using rule 13 (statement)


State 25

   16 expr: object .

    $default  reduce using rule 16 (expr)


State 26

   61 function_definition: anyIdentOrVerb . RETURN TYPE LPAREN parameters RPAREN
   62                    | anyIdentOrVerb . RETURN LPAREN parameters RPAREN

    RETURN  shift, and go to state 62


State 27

    9 simple_statement: function_definition . ASSIGNMENT statement ENDOFLINE
   10                 | function_definition . ENDOFLINE codeblock

    ENDOFLINE   shift, and go to state 63
    ASSIGNMENT  shift, and go to state 64


State 28

   12 simple_statement: class_definition . ENDOFLINE classblock

    ENDOFLINE  shift, and go to state 65


State 29

   36 expr: IDENT DESTRUCTOR .

    $default  reduce using rule 36 (expr)


State 30

   70 class_definition: UNMARKEDNEWIDENT LBRACE . typeArgList RBRACE CLASSDEC TYPE
   72                 | UNMARKEDNEWIDENT LBRACE . typeArgList RBRACE CLASSDECPRIM TYPE

    UNMARKEDNEWIDENT  shift, and go to state 66

    typeArgList  go to state 67


State 31

   69 class_definition: UNMARKEDNEWIDENT CLASSDEC . TYPE

    TYPE  shift, and go to state 68


State 32

   71 class_definition: UNMARKEDNEWIDENT CLASSDECPRIM . TYPE

    TYPE  shift, and go to state 69


State 33

   38 arguments: LPAREN . RPAREN
   39          | LPAREN . arglist RPAREN

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    RPAREN            shift, and go to state 70
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr     go to state 71
    arglist  go to state 72
    object   go to state 25


State 34

   28 expr: VERB arguments .
   40 arguments: arguments . ENDOFLINE codeblock

    ENDOFLINE  shift, and go to state 73

    $default  reduce using rule 28 (expr)


State 35

   30 expr: TYPE LBRACE . TYPE RBRACE arguments

    TYPE  shift, and go to state 74


State 36

   29 expr: TYPE arguments .
   40 arguments: arguments . ENDOFLINE codeblock

    ENDOFLINE  shift, and go to state 73

    $default  reduce using rule 29 (expr)


State 37

   36 expr: IDENT . DESTRUCTOR
   48 object: IDENT .

    DESTRUCTOR  shift, and go to state 29

    $default  reduce using rule 48 (object)


State 38

   49 object: NEWIDENT .

    $default  reduce using rule 49 (object)


State 39

   50 object: UNMARKEDNEWIDENT .

    $default  reduce using rule 50 (object)


State 40

   28 expr: VERB . arguments

    LPAREN  shift, and go to state 33

    $default  reduce using rule 37 (arguments)

    arguments  go to state 34


State 41

   17 expr: expr . ASSIGNMENT expr
   18     | expr . MATHASSIGN expr
   19     | expr . LESSTHAN expr
   20     | expr . GREATERTHAN expr
   21     | expr . COMPARISON expr
   22     | expr . BOOLEANOP expr
   23     | expr . TERNARY expr
   24     | expr . CONDRETURN expr
   25     | expr . MATH_OP expr
   26     | expr . UNARYNEGATE expr
   31     | LPAREN expr . RPAREN
   32     | expr . LBRACKET expr RBRACKETASSIGN expr
   33     | expr . LBRACKET expr RBRACKET
   34     | expr . ACCESSOR anyIdent
   35     | expr . ACCESSOR VERB arguments

    MATH_OP      shift, and go to state 50
    ASSIGNMENT   shift, and go to state 51
    RPAREN       shift, and go to state 75
    LBRACKET     shift, and go to state 52
    UNARYNEGATE  shift, and go to state 53
    MATHASSIGN   shift, and go to state 54
    BOOLEANOP    shift, and go to state 55
    COMPARISON   shift, and go to state 56
    LESSTHAN     shift, and go to state 57
    GREATERTHAN  shift, and go to state 58
    TERNARY      shift, and go to state 59
    CONDRETURN   shift, and go to state 60
    ACCESSOR     shift, and go to state 61


State 42

   17 expr: expr . ASSIGNMENT expr
   18     | expr . MATHASSIGN expr
   19     | expr . LESSTHAN expr
   20     | expr . GREATERTHAN expr
   21     | expr . COMPARISON expr
   22     | expr . BOOLEANOP expr
   23     | expr . TERNARY expr
   24     | expr . CONDRETURN expr
   25     | expr . MATH_OP expr
   26     | expr . UNARYNEGATE expr
   27     | UNARYNEGATE expr .
   32     | expr . LBRACKET expr RBRACKETASSIGN expr
   33     | expr . LBRACKET expr RBRACKET
   34     | expr . ACCESSOR anyIdent
   35     | expr . ACCESSOR VERB arguments

    LBRACKET  shift, and go to state 52
    ACCESSOR  shift, and go to state 61

    $default  reduce using rule 27 (expr)


State 43

   14 statement: RETURN expr .
   17 expr: expr . ASSIGNMENT expr
   18     | expr . MATHASSIGN expr
   19     | expr . LESSTHAN expr
   20     | expr . GREATERTHAN expr
   21     | expr . COMPARISON expr
   22     | expr . BOOLEANOP expr
   23     | expr . TERNARY expr
   24     | expr . CONDRETURN expr
   25     | expr . MATH_OP expr
   26     | expr . UNARYNEGATE expr
   32     | expr . LBRACKET expr RBRACKETASSIGN expr
   33     | expr . LBRACKET expr RBRACKET
   34     | expr . ACCESSOR anyIdent
   35     | expr . ACCESSOR VERB arguments

    MATH_OP      shift, and go to state 50
    ASSIGNMENT   shift, and go to state 51
    LBRACKET     shift, and go to state 52
    UNARYNEGATE  shift, and go to state 53
    MATHASSIGN   shift, and go to state 54
    BOOLEANOP    shift, and go to state 55
    COMPARISON   shift, and go to state 56
    LESSTHAN     shift, and go to state 57
    GREATERTHAN  shift, and go to state 58
    TERNARY      shift, and go to state 59
    CONDRETURN   shift, and go to state 60
    ACCESSOR     shift, and go to state 61

    $default  reduce using rule 14 (statement)


State 44

   11 simple_statement: CODE_INSERT ENDOFLINE .

    $default  reduce using rule 11 (simple_statement)


State 45

    6 simple_statement: DTV_EXTERNAL STRING . ENDOFLINE

    ENDOFLINE  shift, and go to state 76


State 46

    7 simple_statement: DTV_ADDSOURCE STRING . ENDOFLINE

    ENDOFLINE  shift, and go to state 77


State 47

    0 $accept: ritchie "end of file" .

    $default  accept


State 48

    4 statements: statements simple_statement .

    $default  reduce using rule 4 (statements)


State 49

    8 simple_statement: statement ENDOFLINE .

    $default  reduce using rule 8 (simple_statement)


State 50

   25 expr: expr MATH_OP . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 78
    object  go to state 25


State 51

   17 expr: expr ASSIGNMENT . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 79
    object  go to state 25


State 52

   32 expr: expr LBRACKET . expr RBRACKETASSIGN expr
   33     | expr LBRACKET . expr RBRACKET

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 80
    object  go to state 25


State 53

   26 expr: expr UNARYNEGATE . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 81
    object  go to state 25


State 54

   18 expr: expr MATHASSIGN . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 82
    object  go to state 25


State 55

   22 expr: expr BOOLEANOP . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 83
    object  go to state 25


State 56

   21 expr: expr COMPARISON . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 84
    object  go to state 25


State 57

   19 expr: expr LESSTHAN . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 85
    object  go to state 25


State 58

   20 expr: expr GREATERTHAN . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 86
    object  go to state 25


State 59

   23 expr: expr TERNARY . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 87
    object  go to state 25


State 60

   24 expr: expr CONDRETURN . expr

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    SELFIDENT         shift, and go to state 16

    expr    go to state 88
    object  go to state 25


State 61

   34 expr: expr ACCESSOR . anyIdent
   35     | expr ACCESSOR . VERB arguments

    IDENT             shift, and go to state 89
    NEWIDENT          shift, and go to state 90
    UNMARKEDNEWIDENT  shift, and go to state 91
    VERB              shift, and go to state 92

    anyIdent  go to state 93


State 62

   61 function_definition: anyIdentOrVerb RETURN . TYPE LPAREN parameters RPAREN
   62                    | anyIdentOrVerb RETURN . LPAREN parameters RPAREN

    TYPE    shift, and go to state 94
    LPAREN  shift, and go to state 95


State 63

   10 simple_statement: function_definition ENDOFLINE . codeblock

    INDENT  shift, and go to state 96

    codeblock  go to state 97


State 64

    9 simple_statement: function_definition ASSIGNMENT . statement ENDOFLINE

    INT               shift, and go to state 3
    CHAR              shift, and go to state 4
    FLOAT             shift, and go to state 5
    STRING            shift, and go to state 6
    IDENT             shift, and go to state 37
    NEWIDENT          shift, and go to state 38
    UNMARKEDNEWIDENT  shift, and go to state 39
    VERB              shift, and go to state 40
    TYPE              shift, and go to state 11
    LPAREN            shift, and go to state 12
    CONDITIONLINK     shift, and go to state 13
    UNARYNEGATE       shift, and go to state 14
    RETURN            shift, and go to state 15
    SELFIDENT         shift, and go to state 16

    statement  go to state 98
    expr       go to state 24
    object     go to state 25


State 65

   12 simple_statement: class_definition ENDOFLINE . classblock

    INDENT  shift, and go to state 99

    classblock  go to state 100


State 66

   43 typeArgList: UNMARKEDNEWIDENT .
   44            | UNMARKEDNEWIDENT . PARAMCOMMA UNMARKEDNEWIDENT

    PARAMCOMMA  shift, and go to state 101

    $default  reduce using rule 43 (typeArgList)


State 67

   70 class_definition: UNMARKEDNEWIDENT LBRACE typeArgList . RBRACE CLASSDEC TYPE
   72                 | UNMARKEDNEWIDENT LBRACE typeArgList . RBRACE CLASSDECPRIM TYPE

    RBRACE  shift, and go to state 102


State 68

   69 class_definition: UNMARKEDNEWIDENT CLASSDEC TYPE .

    $default  reduce using rule 69 (class_definition)


State 69

   71 class_definition: UNMARKEDNEWIDENT CLASSDECPRIM TYPE .

    $default  reduce using rule 71 (class_definition)


State 70

   38 arguments: LPAREN RPAREN .

    $default  reduce using rule 38 (arguments)


State 71

   17 expr: expr . ASSIGNMENT expr
   18     | expr . MATHASSIGN expr
   19     | expr . LESSTHAN expr
   20     | expr . GREATERTHAN expr
   21     | expr . COMPARISON expr
   22     | expr . BOOLEANOP expr
   23     | expr . TERNARY expr
   24     | expr . CONDRETURN expr
   25     | expr . MATH_OP expr
   26     | expr . UNARYNEGATE expr
   32     | expr . LBRACKET expr RBRACKETASSIGN expr
   33     | expr . LBRACKET expr RBRACKET
   34     | expr . ACCESSOR anyIdent
   35     | expr . ACCESSOR VERB arguments
   41 arglist: expr .
   42        | expr . PARAMCOMMA arglist

    MATH_OP      shift, and go to state 50
    ASSIGNMENT   shift, and go to state 51
    LBRACKET     shift, and go to state 52
    UNARYNEGATE  shift, and go to state 53
    MATHASSIGN   shift, and go to state 54
    BOOLEANOP    shift, and go to state 55
    PARAMCOMMA   shift, and go to state 103
    COMPARISON   shift, and go to state 56
    LESSTHAN     shift, and go to state 57
    GREATERTHAN  shift, and go to state 58
    TERNARY      shift, and go to state 59
    CONDRETURN   shift, and go to state 60
    ACCESSOR     shift, and go to state 61

    $default  reduce using rule 41 (arglist)


State 72

   39 arguments: LPAREN arglist . RPAREN

    RPAREN  shift, and go to state 104


State 73

   40 arguments: arguments ENDOFLINE . codeblock

    INDENT  shift, and go to state 96
